# instrument_database

./: .gitignore  .gitmodules  README.md  conftest.py  install_jupyter_VISA.sh  meson.build  mysim.gpl  mysim.ipynb  mysim.py  mysim_analyzer_scan.py  mysim_simex-lite.py  pytest.ini  readNXS.py  scan.gpl
.ipynb_checkpoints/: mysim-checkpoint.ipynb
institutes/EuXFEL/instruments/SPB-SFX/HEAD/simex-lite/: SPB-SFX.py  simple_beamline.py  spb-sfx.py
institutes/ILL/instruments/D11/HEAD/mcstas/: D11.py  test.py
institutes/ILL/instruments/D11/HEAD/mcstas/data/: 005708.nxs  005711.nxs  005721.nxs  simul_5711.sq
institutes/ILL/instruments/D22/HEAD/mcstas/: D22_quick.py  requirements.txt
institutes/ILL/instruments/D22/HEAD/mcstas/validation/: Detector_1652433908.x_y  Detector_1652434584.x_y  H51_D22_Sample_Div_1652434584.hd_vd  H51_D22_Sample_L_1652434584.L  H51_D22_Sample_XY_1652434584.x_y  mccode.sim
institutes/ILL/instruments/IN16B/HEAD/mcstas/: IN16B.py
institutes/ILL/instruments/IN5/HEAD/mcstas/: IN5.py
institutes/ILL/instruments/Panther/HEAD/mcstas/: Panther.py  test_Panther.py
institutes/ILL/instruments/ThALES/HEAD/mcstas/: McStasInstrumentBase.py  ThALES.py  ThALES_analyzer.py  ThALES_merge.py  ThALES_sample.py
institutes/ILL/instruments/ThALES/HEAD/mcstas/other/: mysim_rv.gpl  mysim_rv.py
institutes/ILL/instruments/ThALES/HEAD/mcstas/validation/: ThALES_resolution_v2.instr  mccode.sim  res_monitor_list.ki_x.ki_y.ki_z.kf_x.kf_y.kf_z.x.y.z.p_i.p_f
institutes/ILL/samples/: vanadium.py
institutes/ILL/sources/HEAD/mcstas/: Full.py  Gauss.py  Monochromator_source.py  QuickSource_D22.py
institutes/test_institute/instruments/test_instrument/HEAD/simex/: test.py
mcstas/: CMakeLists.txt  McStasInstrumentBase.py  helper_functions.py  requirements.txt
mcstas/ILL/instruments/D22/HEAD/: D22_quick.py
mcstas/ILL/instruments/D22/HEAD/test/: D22_Detector_0000000000.x_y  H51_D22_Sample_Div_1626849795.hd_vd  H51_D22_Sample_L_1626849795.L  H51_D22_Sample_XY_1626849795.x_y  mccode.sim
mcstas/ILL/sources/HEAD/: QuickSource_D22.py
mcstas/components/: Attenuator.comp  Cyl_TOF.comp  MCPL2hist.instr  MCPL_input.comp  README.md
mcstas/data/: attenuator1.trm
mcstas/institutes/ILL/instruments/D22/HEAD/: D22_quick.py
mcstas/institutes/ILL/instruments/D22/HEAD/test/: Detector_1626849795.x_y
mcstas/institutes/PSI/instruments/DMC/HEAD/: DMC.py
mcstas/scripts/: compare_test.sh  py_to_instr.py  run_test_simulation.sh  setup.py  test.py
simex/: requirements.txt
simex/institutes/test/instruments/test/HEAD/: test.py  test_instrument.py
subprojects/: mcpl.wrap
subprojects/packagefiles/mcpl/: meson.build
